--- a/main.html
+++ b/main.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-	<h1>"Welcome to Accio Jobs!"</h1>
+	<h1>Welcome to Accio Jobs!</h1>
 
-    
+      <script type="text/javascript" src="./script.js">
+</script>
 </body>
 
 </html>
